--- a/styles/breakpoints/_index-breakpoints.scss
+++ b/styles/breakpoints/_index-breakpoints.scss
@@ -310,11 +310,13 @@
                 p{
                     padding: 0px 10%;
                 }
+                margin-bottom: 20px;
                width: 100%;
             }
             .skill-heading{
                 margin-top: 20px;
                 font-size: 1.2em;
+                height: 20px;
                 font-weight: 500;
             }
             .skill-desc{
